Redesign phone mockup to be cleaner and flatter (removed 3D elements)

--- a/index.html
+++ b/index.html
@@ -115,61 +115,52 @@
                     <div class="hero-image-wrapper">
                         <!-- Main Phone -->
                         <div class="phone-mockup">
-                            <div class="phone-frame">
-                                <!-- Side buttons -->
-                                <div class="phone-button power-btn"></div>
-                                <div class="phone-button volume-up"></div>
-                                <div class="phone-button volume-down"></div>
-                                <!-- Camera bump -->
-                                <div class="camera-module">
-                                    <div class="camera-lens lens-1"></div>
-                                    <div class="camera-lens lens-2"></div>
-                                    <div class="camera-lens lens-3"></div>
-                                    <div class="camera-flash"></div>
-                                </div>
-                                <!-- Screen -->
+                            <div class="phone-border">
+                                <div class="phone-notch-island"></div>
                                 <div class="phone-screen">
-                                    <!-- Dynamic Island / Notch -->
-                                    <div class="phone-notch"></div>
-                                    <!-- Screen content -->
-                                    <div class="screen-content">
-                                        <div class="screen-time">12:45</div>
-                                        <div class="screen-date">Tuesday, 14 January</div>
-                                        <div class="screen-wallpaper"></div>
-                                        <div class="screen-apps">
-                                            <div class="app-icon"><span class="material-icons-outlined">call</span>
-                                            </div>
-                                            <div class="app-icon"><span class="material-icons-outlined">message</span>
-                                            </div>
-                                            <div class="app-icon"><span
-                                                    class="material-icons-outlined">camera_alt</span></div>
-                                            <div class="app-icon"><span class="material-icons-outlined">settings</span>
-                                            </div>
+                                    <div class="screen-header">
+                                        <div class="status-left">12:45</div>
+                                        <div class="status-right">
+                                            <span class="material-icons-outlined">signal_cellular_alt</span>
+                                            <span class="material-icons-outlined">wifi</span>
+                                            <span class="material-icons-outlined">battery_full</span>
                                         </div>
-                                        <div class="home-indicator"></div>
                                     </div>
+                                    <div class="screen-body">
+                                        <div class="screen-widget clock-widget">
+                                            <div class="widget-time">12:45</div>
+                                            <div class="widget-date">Tuesday, 14 Jan</div>
+                                        </div>
+                                        <div class="screen-apps-grid">
+                                            <div class="app-item" style="--app-color: #25D366"><span
+                                                    class="material-icons-outlined">call</span></div>
+                                            <div class="app-item" style="--app-color: #1A365D"><span
+                                                    class="material-icons-outlined">message</span></div>
+                                            <div class="app-item" style="--app-color: #FF6B35"><span
+                                                    class="material-icons-outlined">camera_alt</span></div>
+                                            <div class="app-item" style="--app-color: #333"><span
+                                                    class="material-icons-outlined">settings</span></div>
+                                        </div>
+                                    </div>
+                                    <div class="home-bar"></div>
                                 </div>
                             </div>
                         </div>
-                        <!-- Second Phone (background) -->
-                        <div class="phone-mockup phone-secondary">
-                            <div class="phone-frame">
-                                <div class="phone-screen">
-                                    <div class="phone-notch"></div>
-                                    <div class="screen-content secondary-content">
-                                        <div class="screen-time">12:45</div>
-                                        <div class="screen-wallpaper gradient-2"></div>
-                                    </div>
-                                </div>
+
+                        <!-- Floating Elements -->
+                        <div class="floating-badge badge-1">
+                            <div class="badge-icon"><span class="material-icons-outlined">verified</span></div>
+                            <div class="badge-text">
+                                <span class="badge-title">Genuine</span>
+                                <span class="badge-subtitle">100% Original</span>
                             </div>
                         </div>
-                        <div class="floating-card card-1">
-                            <span class="material-icons-outlined">verified</span>
-                            <span>Genuine Products</span>
-                        </div>
-                        <div class="floating-card card-2">
-                            <span class="material-icons-outlined">local_offer</span>
-                            <span>Best Prices</span>
+                        <div class="floating-badge badge-2">
+                            <div class="badge-icon"><span class="material-icons-outlined">local_offer</span></div>
+                            <div class="badge-text">
+                                <span class="badge-title">Best Prices</span>
+                                <span class="badge-subtitle">In Siddapur</span>
+                            </div>
                         </div>
                     </div>
                 </div>
