feat: site overhaul - SEO, bilingual buttons, real testimonials, and mobile optimizations

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>Arvi Enterprises - Your Trusted Mobile Shop</title>
+    <meta name="description"
+        content="Arvi Mobiles in Siddapur: Your trusted local shop for latest smartphones, repairs, and accessories. Best prices and genuine service. / ಅರ್ವಿ ಮೊಬೈಲ್ಸ್ ಸಿದ್ದಾಪುರ." />
+    <link rel="icon" type="image/svg+xml" href="assets/logo.svg">
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect" />
@@ -79,7 +82,7 @@
     </style>
 </head>
 
-<body class="bg-background-light dark:bg-background-dark text-[#121714] overflow-x-hidden">
+<body class="bg-background-light dark:bg-background-dark text-[#121714] overflow-x-hidden pb-24">
     <!-- Navbar -->
     <header class="sticky top-0 z-50 glass-nav border-b border-[#e5e7eb] dark:border-gray-800">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -119,7 +122,7 @@
                     <a href="tel:+919449360059"
                         class="flex items-center justify-center gap-2 h-10 px-5 rounded-full bg-primary text-white text-sm font-bold shadow-lg shadow-primary/30 hover:bg-primary-dark transition-all transform hover:-translate-y-0.5">
                         <span class="material-symbols-outlined text-[18px]">call</span>
-                        <span class="hidden sm:inline">Call Now</span>
+                        <span class="hidden sm:inline">Call Now / <span class="kannada-text">ಕರೆ ಮಾಡಿ</span></span>
                     </a>
                 </div>
             </div>
@@ -156,13 +159,13 @@
                         cutting-edge technology with the warmth of local trust.
                     </p>
                     <div class="flex flex-wrap justify-center lg:justify-start gap-4">
-                        <button
+                        <a href="https://wa.me/917349758011" target="_blank"
                             class="flex items-center justify-center h-12 px-8 rounded-xl bg-primary text-white text-base font-bold shadow-xl shadow-primary/20 hover:bg-primary-dark hover:shadow-2xl transition-all">
-                            View Collection
-                        </button>
+                            Inquire via WhatsApp
+                        </a>
                         <a href="#contact"
                             class="flex items-center justify-center h-12 px-8 rounded-xl bg-surface border border-gray-200 text-gray-800 text-base font-bold hover:bg-gray-50 transition-colors">
-                            Contact Us
+                            Contact Us / <span class="kannada-text ml-1">ಸಂಪರ್ಕಿಸಿ</span>
                         </a>
                     </div>
                     <div
@@ -182,10 +185,10 @@
                     <div class="absolute inset-0 bg-accent/20 rounded-[2.5rem] rotate-3 blur-sm transform scale-95 z-0">
                     </div>
                     <div class="relative z-10 rounded-[2rem] overflow-hidden card-shadow bg-surface aspect-[4/3] group">
-                        <div class="absolute inset-0 bg-gradient-to-t from-black/40 to-transparent z-10"></div>
+                        <div class="absolute inset-0 bg-gradient-to-t from-black/80 to-transparent z-10"></div>
                         <div class="absolute bottom-6 left-6 z-20 text-white">
-                            <p class="text-sm font-medium opacity-90 mb-1">New Arrivals</p>
-                            <p class="text-xl font-bold">Latest Flagship Smartphones</p>
+                            <p class="text-sm font-medium opacity-90 mb-1">In Stock Now</p>
+                            <p class="text-xl font-bold">Premium Flagship Series</p>
                         </div>
                         <div class="w-full h-full bg-cover bg-center transition-transform duration-700 group-hover:scale-105"
                             data-alt="Modern Samsung smartphone with colorful display"
@@ -246,8 +249,8 @@
                     <p class="text-gray-600">Find exactly what you're looking for.</p>
                 </div>
                 <a class="hidden md:inline-flex items-center gap-2 text-primary font-bold hover:gap-3 transition-all"
-                    href="#">
-                    View All Products
+                    href="#contact">
+                    Visit Shop / <span class="kannada-text mx-1">ಭೇಟಿ ನೀಡಿ</span>
                     <span class="material-symbols-outlined text-sm">arrow_forward</span>
                 </a>
             </div>
@@ -270,7 +273,7 @@
                 <div class="group relative aspect-[4/5] overflow-hidden rounded-2xl cursor-pointer">
                     <div class="absolute inset-0 bg-cover bg-center transition-transform duration-500 group-hover:scale-110"
                         data-alt="Collection of used smartphones on a wooden surface"
-                        style="background-image: url('assets/preowned_phones.png');">">
+                        style="background-image: url('assets/preowned_phones.png');">
                     </div>
                     <div class="absolute inset-0 bg-gradient-to-t from-black/80 via-black/20 to-transparent"></div>
                     <div class="absolute bottom-0 left-0 p-6 w-full">
@@ -310,10 +313,10 @@
                 </div>
             </div>
             <div class="mt-8 text-center md:hidden">
-                <button
-                    class="w-full h-12 rounded-xl border border-primary text-primary font-bold hover:bg-primary hover:text-white transition-colors">
-                    View All Products
-                </button>
+                <a href="#contact"
+                    class="flex items-center justify-center w-full h-12 rounded-xl border border-primary text-primary font-bold hover:bg-primary hover:text-white transition-colors">
+                    Visit Shop / <span class="kannada-text ml-1">ಭೇಟಿ ನೀಡಿ</span>
+                </a>
             </div>
         </div>
     </section>
@@ -339,16 +342,16 @@
                         <span class="material-symbols-outlined text-lg fill-current">star</span>
                         <span class="material-symbols-outlined text-lg fill-current">star</span>
                     </div>
-                    <p class="text-gray-700 italic mb-6">"Bought my new Samsung phone here. The staff was incredibly
-                        helpful in explaining the features and transferring my data. Highly recommended!"</p>
+                    <p class="text-gray-700 italic mb-6">"Bought my new I phone here. The staff was incredibly helpful
+                        in explaining the features and transferring my data. Highly recommended!"</p>
                     <div class="flex items-center gap-3">
                         <div class="w-10 h-10 rounded-full bg-gray-300 bg-cover bg-center"
-                            data-alt="Portrait of a smiling man"
-                            style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuCtqlNmrnyvMujjjjhmAPZFwn4-xy0e5nsPXorWJdWKYEZxPxvpIr7I51USgbv8-blZUp2Z3ug25D_wCN-oWDZ9oJIAvMKQ0dNRRfH-h7gngxMOkJA1MjaqjhLriZXNJy9DQf8N0u8jIsGAbQEC2hDgK7gWGMtinlFFCZdN1SqpIcsUIsHO8uRTtboQQKOitJ4FBLh7xWgM8cMmykcKEBD24bHUNV3qoik3HOZaMEffuXQmwH18YstlvltHw6oiOKKJvtorQcQHnoGd')">
+                            data-alt="Portrait of Harish Harry"
+                            style="background-image: url('assets/harish_review.png')">
                         </div>
                         <div>
-                            <p class="font-bold text-sm text-[#121714]">Ravi Kumar</p>
-                            <p class="text-xs text-gray-500">Local Guide</p>
+                            <p class="font-bold text-sm text-[#121714]">Harish Harry</p>
+                            <p class="text-xs text-gray-500">Analyst at London market account</p>
                         </div>
                     </div>
                 </div>
@@ -365,15 +368,14 @@
                         <span class="material-symbols-outlined text-lg fill-current">star</span>
                     </div>
                     <p class="text-gray-700 italic mb-6">"Best mobile shop in Siddapur! Got a great deal on a
-                        second-hand iPhone. The condition was pristine, just like new. Trustworthy people."</p>
+                        second-hand Phones. The condition was pristine, just like new."</p>
                     <div class="flex items-center gap-3">
                         <div class="w-10 h-10 rounded-full bg-gray-300 bg-cover bg-center"
-                            data-alt="Portrait of a smiling woman"
-                            style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuB5I4jE8x4m6JsO9MqsBr6ANmLDSIAZDufR-yCHWqeLOUg_rPFk80YWQKSec4PBuL96ucF5GnqY14g92vwJDU53HH1qYo7s0E6SVVzcFEn5ouU0G1KktV6onR06EYPxSuUJmXTBVUTUlobccbFBl72OQeJrMPrn6tnKRtO2zQw4iBuoczW9ChgG1ekDSWKIQojm34b6rZmXsJW2iDjbMSCteuHoQLllcSCY7saCajDxVpaTGN3WWgErPwBaHMiCJiugf3GEI9Y68hVK')">
+                            data-alt="Portrait of Abhishek" style="background-image: url('assets/abhishek_review.png')">
                         </div>
                         <div>
-                            <p class="font-bold text-sm text-[#121714]">Ananya Hegde</p>
-                            <p class="text-xs text-gray-500">Teacher</p>
+                            <p class="font-bold text-sm text-[#121714]">Abhishek</p>
+                            <p class="text-xs text-gray-500">Sales Executive</p>
                         </div>
                     </div>
                 </div>
@@ -389,19 +391,28 @@
                         <span class="material-symbols-outlined text-lg fill-current">star</span>
                     </div>
                     <p class="text-gray-700 italic mb-6">"My phone screen was shattered, and they fixed it within hours.
-                        The finish is perfect and the price was very reasonable. Thank you Arvi Enterprises!"</p>
+                        The finish is perfect and the price was very reasonable. Thank you Arvi Mobiles!"</p>
                     <div class="flex items-center gap-3">
-                        <div class="w-10 h-10 rounded-full bg-gray-300 bg-cover bg-center"
-                            data-alt="Portrait of a young man"
-                            style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuDqkv3MiJ6HrUfmiY3c30bPk2eCEqBn86MSWrK889JYvaaPC_aFtK4_LS7A6PhlppXB9S-KFr5Y7RqfIqyrhljP2kZNNElV72_oFiIpqyMP08yLzEMKhZXl6zrGOESYGYxCddD_TtIfkggs8CVxrxDITOptF6raDXUlarGD-_INN3360Xq_wd92s-m-AiRW6Gld--lUkwW4hEx4_9rqEPTjJC-mxaYC5SHjlSHR8YlfTGEz9Yy6MJEwt4EzhMVVKXPTqkw5FaNtukY3')">
+                        <div class="w-10 h-10 rounded-full bg-gray-300 bg-cover bg-center" data-alt="Portrait of Pavan"
+                            style="background-image: url('assets/pavan_review.png')">
                         </div>
                         <div>
-                            <p class="font-bold text-sm text-[#121714]">Karthik S</p>
-                            <p class="text-xs text-gray-500">Software Engineer</p>
+                            <p class="font-bold text-sm text-[#121714]">Pavan</p>
+                            <p class="text-xs text-gray-500">Associate manager</p>
                         </div>
                     </div>
                 </div>
+                <div class="mt-12 text-center">
+                    <a href="https://www.google.com/search?q=ravi+enterprises+siddapur+reviews" target="_blank"
+                        class="inline-flex items-center gap-2 px-6 py-3 rounded-xl bg-white border border-gray-200 text-gray-700 font-bold shadow-sm hover:shadow-md hover:text-primary transition-all">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg"
+                            alt="Google" class="w-5 h-5" />
+                        Read our Reviews on Google
+                    </a>
+                </div>
             </div>
+        </div>
+        </div>
         </div>
     </section>
     <!-- Services Section -->
@@ -584,6 +595,32 @@
                         </div>
                     </div>
                 </div>
+                <!-- Contact Form -->
+                <div class="lg:w-1/3 bg-gray-800/50 p-6 rounded-2xl border border-gray-700">
+                    <h3 class="text-xl font-bold text-white mb-4">Quick Inquiry / ವಿಚಾರಿಸಿ</h3>
+                    <form onsubmit="sendWhatsapp(event)" class="flex flex-col gap-4">
+                        <input type="text" id="name" placeholder="Your Name / ನಿಮ್ಮ ಹೆಸರು" required
+                            class="w-full h-10 px-4 rounded-lg bg-gray-900 border border-gray-700 text-white placeholder-gray-500 focus:border-primary focus:ring-1 focus:ring-primary outline-none transition-colors">
+                        <input type="tel" id="phone" placeholder="Phone Number / ಮೊಬೈಲ್ ಸಂಖ್ಯೆ"
+                            class="w-full h-10 px-4 rounded-lg bg-gray-900 border border-gray-700 text-white placeholder-gray-500 focus:border-primary focus:ring-1 focus:ring-primary outline-none transition-colors">
+                        <textarea id="message" rows="3" placeholder="Message / ಸಂದೇಶ" required
+                            class="w-full p-4 rounded-lg bg-gray-900 border border-gray-700 text-white placeholder-gray-500 focus:border-primary focus:ring-1 focus:ring-primary outline-none transition-colors"></textarea>
+                        <button type="submit"
+                            class="w-full h-10 rounded-lg bg-primary text-white font-bold hover:bg-primary-dark transition-colors flex items-center justify-center gap-2">
+                            Send via WhatsApp <span class="material-symbols-outlined text-[18px]">send</span>
+                        </button>
+                    </form>
+                    <script>
+                        function sendWhatsapp(e) {
+                            e.preventDefault();
+                            var name = document.getElementById("name").value;
+                            var phone = document.getElementById("phone").value;
+                            var message = document.getElementById("message").value;
+                            var text = "Hi Arvi Mobiles, I am " + name + ". " + (phone ? "My number is " + phone + ". " : "") + message;
+                            window.open("https://wa.me/917349758011?text=" + encodeURIComponent(text), "_blank");
+                        }
+                    </script>
+                </div>
                 <!-- Map -->
                 <div
                     class="lg:w-2/3 rounded-2xl overflow-hidden h-[300px] lg:h-auto bg-gray-800 relative shadow-2xl border border-gray-700">
@@ -592,6 +629,13 @@
                         width="100%" height="100%"
                         style="border:0; filter: invert(90%) hue-rotate(180deg) contrast(90%);" allowfullscreen=""
                         loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="w-full h-full block"></iframe>
+                    <div class="absolute bottom-4 left-4 right-4">
+                        <a href="https://maps.app.goo.gl/YourGoogleMapsLinkHere" target="_blank"
+                            class="w-full h-10 rounded-lg bg-white text-gray-900 font-bold flex items-center justify-center gap-2 shadow-lg hover:bg-gray-50 transition-colors">
+                            <span class="material-symbols-outlined text-primary text-[20px]">directions</span>
+                            Get Directions / ದಾರಿ ತೋರಿಸಿ
+                        </a>
+                    </div>
                 </div>
             </div>
             <div class="border-t border-gray-800 pt-8 text-center">
@@ -601,13 +645,13 @@
     </section>
     <!-- Floating WhatsApp Button -->
     <a aria-label="Chat on WhatsApp"
-        class="fixed bottom-6 right-6 w-14 h-14 bg-[#25D366] rounded-full flex items-center justify-center shadow-lg hover:bg-[#20bd5a] transition-all hover:scale-110 z-50 group"
+        class="fixed bottom-4 right-4 md:bottom-6 md:right-6 w-14 h-14 bg-[#25D366] rounded-full flex items-center justify-center shadow-lg hover:bg-[#20bd5a] transition-all hover:scale-110 z-[100] group"
         href="https://wa.me/917349758011" target="_blank">
         <span class="material-symbols-outlined text-white text-[32px]">chat</span>
         <!-- Tooltip -->
         <div
             class="absolute right-full mr-3 bg-white text-gray-800 text-xs font-bold py-1.5 px-3 rounded-lg shadow-md opacity-0 group-hover:opacity-100 transition-opacity whitespace-nowrap pointer-events-none">
-            Chat with us
+            Chat / <span class="kannada-text">ಚಾಟ್ ಮಾಡಿ</span>
         </div>
     </a>
 </body>
