feat: content updates - new accessories/repairs images, POCO C75 hero with price

--- a/index.html
+++ b/index.html
@@ -187,8 +187,9 @@
                     <div class="relative z-10 rounded-[2rem] overflow-hidden card-shadow bg-surface aspect-[4/3] group">
                         <div class="absolute inset-0 bg-gradient-to-t from-black/80 to-transparent z-10"></div>
                         <div class="absolute bottom-6 left-6 z-20 text-white">
-                            <p class="text-sm font-medium opacity-90 mb-1">In Stock Now</p>
-                            <p class="text-xl font-bold">Premium Flagship Series</p>
+                            <p class="text-sm font-medium opacity-90 mb-1">New Arrival</p>
+                            <p class="text-xl font-bold">POCO C75 5G</p>
+                            <p class="text-lg font-bold text-accent mt-1">Special Price: ₹10,000</p>
                         </div>
                         <div class="w-full h-full bg-cover bg-center transition-transform duration-700 group-hover:scale-105"
                             data-alt="Modern Samsung smartphone with colorful display"
@@ -287,7 +288,7 @@
                 <div class="group relative aspect-[4/5] overflow-hidden rounded-2xl cursor-pointer">
                     <div class="absolute inset-0 bg-cover bg-center transition-transform duration-500 group-hover:scale-110"
                         data-alt="Headphones and charging cables neatly arranged"
-                        style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuATCA4RUrKGheAR9tI06zze_Vo0r25EnEbStisOQkUcEAGgydlnvdep_XEman_jZX1UWfrdz95FNUK6YX2p5SfK_2TTLHm5Ttdk-UANfPEuVmBg5ZU-i6BpD7hx_8Qh1LmmL8IDRbrBG_WYuKVt-OmqxkCLvHJjh5mcu96N4k5OC3RgEKOgpxgW3m6RtvzLYlKtnFt55PEcSiO25EeMxQaRJX016pQkxnlOrkCLqfSCXpIat_98f5Si-0QJZjvurkmm5ob0Zyhmz4g-');">
+                        style="background-image: url('assets/accessories.png');">
                     </div>
                     <div class="absolute inset-0 bg-gradient-to-t from-black/80 via-black/20 to-transparent"></div>
                     <div class="absolute bottom-0 left-0 p-6 w-full">
@@ -301,7 +302,7 @@
                 <div class="group relative aspect-[4/5] overflow-hidden rounded-2xl cursor-pointer">
                     <div class="absolute inset-0 bg-cover bg-center transition-transform duration-500 group-hover:scale-110"
                         data-alt="Technician repairing a mobile phone circuit board"
-                        style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuAbvW1YMhrGsXlqLRTY8w2EEsOIRPtP0KHwHBD7Hojaj7VRaOTy7wwwqMr3UK_Dfl3qIZc_lOI86h-22DkQ-DyFUwN_kcJdQ46lj12U6QiC_4Xv6ci6yKzkZYWrhuX7j7_ZB_B1F1KGaEeP6ZG0VTIGOwvNAL61B85j9CDka2XGS3tYnbYkzj0lkLTH0jKpWRrDVPToTUw8-c0M2KhochWx2KpVHxSeIG3n9aHvxcJUZFZAZMnMKDvzayJnnaQ9G3HuQz-vnFM_EIQu');">
+                        style="background-image: url('assets/repairs.png');">
                     </div>
                     <div class="absolute inset-0 bg-gradient-to-t from-black/80 via-black/20 to-transparent"></div>
                     <div class="absolute bottom-0 left-0 p-6 w-full">
@@ -630,7 +631,8 @@
                         style="border:0; filter: invert(90%) hue-rotate(180deg) contrast(90%);" allowfullscreen=""
                         loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="w-full h-full block"></iframe>
                     <div class="absolute bottom-4 left-4 right-4">
-                        <a href="https://maps.app.goo.gl/YourGoogleMapsLinkHere" target="_blank"
+                        <a href="https://www.google.com/maps/dir/?api=1&destination=Ravi+Enterprises+Siddapur+Karnataka"
+                            target="_blank"
                             class="w-full h-10 rounded-lg bg-white text-gray-900 font-bold flex items-center justify-center gap-2 shadow-lg hover:bg-gray-50 transition-colors">
                             <span class="material-symbols-outlined text-primary text-[20px]">directions</span>
                             Get Directions / ದಾರಿ ತೋರಿಸಿ
