fix(cache): force image refresh with query params

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                         </div>
                         <div class="w-full h-full bg-cover bg-center transition-transform duration-700 group-hover:scale-105"
                             data-alt="Modern Samsung smartphone with colorful display"
-                            style="background-image: url('assets/hero_phone.png');">
+                            style="background-image: url('assets/hero_phone.png?v=2');">
                         </div>
                     </div>
 
@@ -288,7 +288,7 @@
                 <div class="group relative aspect-[4/5] overflow-hidden rounded-2xl cursor-pointer">
                     <div class="absolute inset-0 bg-cover bg-center transition-transform duration-500 group-hover:scale-110"
                         data-alt="Headphones and charging cables neatly arranged"
-                        style="background-image: url('assets/accessories.png');">
+                        style="background-image: url('assets/accessories.png?v=2');">
                     </div>
                     <div class="absolute inset-0 bg-gradient-to-t from-black/80 via-black/20 to-transparent"></div>
                     <div class="absolute bottom-0 left-0 p-6 w-full">
@@ -302,7 +302,7 @@
                 <div class="group relative aspect-[4/5] overflow-hidden rounded-2xl cursor-pointer">
                     <div class="absolute inset-0 bg-cover bg-center transition-transform duration-500 group-hover:scale-110"
                         data-alt="Technician repairing a mobile phone circuit board"
-                        style="background-image: url('assets/repairs.png');">
+                        style="background-image: url('assets/repairs.png?v=2');">
                     </div>
                     <div class="absolute inset-0 bg-gradient-to-t from-black/80 via-black/20 to-transparent"></div>
                     <div class="absolute bottom-0 left-0 p-6 w-full">
